bat.string1.lessons.bat.string1.StringYak.scala.error
stringYak:4: error: type mismatch;
 found   : Unit
 required: String
  for(i<- 0 to str.length-3)
       ^